# AGNET

./: .gitignore  README.md  main.py  pyproject.toml  rxconfig.py
agnet/: agnet.py
agnet/components/: input_field.py  sidebar.py
agnet/pages/: home.py  login.py
src/agent/: agent.py
src/config/: config.py
src/research/: samp.ipynb
src/storage/: storage.py
