[project]
name = "agnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.4.6",
    "flask>=3.1.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "setuptools>=80.4.0",
    "sqlalchemy>=2.0.40",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
